--- a/fitzy_frontend/css/admin.css
+++ b/fitzy_frontend/css/admin.css
@@ -165,6 +165,28 @@ footer {
   justify-content: center;
 }
 
+#statusMessage {
+  display: none;
+  position: fixed;
+  top:40px;                
+  left: 50%;
+  transform: translateX(-50%);
+
+  padding: 12px 25px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 17px;
+  text-align: center;
+
+  background: #fff3cd;    
+  color: #856404;         
+
+  box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+  z-index: 9999;
+}
+
+
+
 @media (max-width: 768px) {
   .header {
     height: auto;
