--- a/fitzy_frontend/css/home.css
+++ b/fitzy_frontend/css/home.css
@@ -843,7 +843,20 @@ i.quate {
     border: none;
 }
 
-
+#statusMessage {
+  display: none;
+  position: fixed;
+  top: 60px;              /* header keela */
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff3cd;
+  color: #856404;
+  padding: 20px 20px;
+  border-radius: 8px;
+  font-weight: 600;
+  z-index: 9999;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+}
 
 
 @media (max-width: 1024px) {
